resolve z-index of table resize bars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,3 @@
-
+.ag-header-cell-resize {
+    z-index: 0 !important;
+}
